--- a/res/menu/activity_big_map.xml
+++ b/res/menu/activity_big_map.xml
@@ -4,5 +4,13 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_settings"
+        />
+    <item
+        android:id="@+id/menu_change_map_type"
+        android:icon="@drawable/snmaptype"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/change_map_type"
+        />
 </menu>
