--- a/res/layout/activity_export_note.xml
+++ b/res/layout/activity_export_note.xml
@@ -3,5 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+    
+    <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="191dp"
+            android:layout_height="259dp"
+            android:src="@drawable/ic_launcher" />
+
+     <EditText
+            android:id="@+id/enterServer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/server_hint"
+            android:inputType="textMultiLine" />
+     <Button
+        android:id="@+id/button_send_note"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="sendNote"
+        android:text="@string/button_send_note" />
 
 </LinearLayout>
